fix version # to conform to x.y.z
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/EBarrays@12465 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: EBarrays
-Version: 1.0-19
+Version: 1.0.19
 Date: 2004/10/04
 Title: Empirical Bayes for Microarrays
 Author:  Christina Kendziorski, Michael Newton and Deepayan Sarkar
