--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: EBarrays
-Version: 1.1.1
+Version: 1.1.2
 Date: 2005/09/28
 Title: Empirical Bayes for Microarrays
 Author: Christina Kendziorski, Michael Newton and Deepayan Sarkar
@@ -9,4 +9,4 @@ Description: EBarrays provides tools for the analysis of replicated
 Depends: R (>= 2.2.0), Biobase, utils, lattice
 LazyLoad: yes
 License: GPL Version 2.0 or later.
-
+SaveImage: yes
