--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ Depends: R (>= 2.2.0), Biobase, utils, lattice
 LazyLoad: yes
 License: GPL Version 2.0 or later.
 SaveImage: yes
+biocViews: Statistics, DifferentialExpression, Microarray
