SaveImage is deprecated, using LazyLoad instead
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/EBarrays@24616 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ Description: EBarrays provides tools for the analysis of replicated
 Depends: R (>= 2.4.0), Biobase (>= 1.11.0), methods, utils, lattice
 LazyLoad: yes
 License: GPL Version 2.0 or later.
-SaveImage: yes
+LazyLoad: yes
 biocViews: Statistics, DifferentialExpression, Microarray
