--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,9 @@
 Package: EBarrays
-Version: 1.9.2
-Date: 2007/04/27
-Title: Empirical Bayes for Microarrays
-Author: Christina Kendziorski, Michael Newton and Deepayan Sarkar
-Maintainer: Deepayan Sarkar <deepayan@stat.wisc.edu>
-Description: EBarrays provides tools for the analysis of replicated
-        microarray data across multiple conditions.
-Depends: R (>= 2.4.0), Biobase (>= 1.11.0), methods, utils, lattice
+Version: 2.0-1
+Date: 2007/09/20
+Title: Unified Approach for Simultaneous Gene Clustering and Differential Expression Identification
+Author:  Ming Yuan, Christina Kendziorski, Michael Newton and Deepayan Sarkar
+Maintainer: Ming Yuan <myuan@isye.gatech.edu>
+Description:  EBarrays provides tools for the analysis of replicated/unreplicated microarray data.
+Depends: R (>= 1.8.0), Biobase, utils, lattice, cluster
 License: GPL Version 2.0 or later.
-LazyLoad: yes
-biocViews: Statistics, DifferentialExpression, Microarray
