--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,4 +6,4 @@ Author:  Ming Yuan, Christina Kendziorski, Michael Newton and Deepayan Sarkar
 Maintainer: Ming Yuan <myuan@isye.gatech.edu>
 Description:  EBarrays provides tools for the analysis of replicated/unreplicated microarray data.
 Depends: R (>= 1.8.0), Biobase, utils, lattice, cluster
-License: GPL Version 2.0 or later.
+License: GPL (>= 2)
