fixed warnings about missing methods package declaration
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/EBarrays@33353 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,5 +5,5 @@ Title: Unified Approach for Simultaneous Gene Clustering and Differential Expres
 Author:  Ming Yuan, Christina Kendziorski, Michael Newton and Deepayan Sarkar
 Maintainer: Ming Yuan <myuan@isye.gatech.edu>
 Description:  EBarrays provides tools for the analysis of replicated/unreplicated microarray data.
-Depends: R (>= 1.8.0), Biobase, utils, lattice, cluster
+Depends: R (>= 1.8.0), Biobase, utils, lattice, cluster, methods
 License: GPL (>= 2)
