--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,5 +5,6 @@ Title: Unified Approach for Simultaneous Gene Clustering and Differential Expres
 Author:  Ming Yuan, Christina Kendziorski, Michael Newton and Deepayan Sarkar
 Maintainer: Ming Yuan <myuan@isye.gatech.edu>
 Description:  EBarrays provides tools for the analysis of replicated/unreplicated microarray data.
-Depends: R (>= 1.8.0), Biobase, utils, lattice, cluster, methods
+Depends: R (>= 1.8.0), Biobase, lattice, methods
+Imports: Biobase, cluster, graphics, grDevices, lattice, methods, stats
 License: GPL (>= 2)
