--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,4 @@ Description:  EBarrays provides tools for the analysis of replicated/unreplicate
 Depends: R (>= 1.8.0), Biobase, lattice, methods
 Imports: Biobase, cluster, graphics, grDevices, lattice, methods, stats
 License: GPL (>= 2)
+biocViews: DefferentialExpression, Clustering
